--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 logging.level.org.zalando.logbook: TRACE
-spring.sql.init.mode=ALWAYS
+spring.sql.init.mode=always
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.h2.console.settings.trace=false
+spring.h2.console.settings.web-allow-others=false
 spring.datasource.url=jdbc:h2:file:./db/filmorate
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=password
-
+spring.datasource.password=1
